All: Updated ChangeLog files for changes in INET master branch from 2019-11-12 to 2019-12-10.

--- a/src/inet/applications/voipstream/ChangeLog
+++ b/src/inet/applications/voipstream/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-28  Zoltan Bojthe
+
+	Added timeToLive, dscp, tos NED parameters.
+
 2019-11-08  Zoltan Bojthe
 
 	Added missing return value checks.
