--- a/src/inet/networklayer/configurator/ipv4/ChangeLog
+++ b/src/inet/networklayer/configurator/ipv4/ChangeLog
@@ -1,5 +1,15 @@
 ====== inet-4.x ======
 
+2019-11-28  Zoltan Bojthe
+
+	Routing table and configurator detects when an interface connecting/disconnecting.
+
+2019-11-13  Zoltan Bojthe
+
+	Added slash notation support for interface netmask, issue #303.
+	Copied necessary parts from Ipv4NodeConfigurator to HostAutoConfigurator to allow replacing, feature #447.
+	Added IIpv4NodeConfigurator module interface.
+
 2019-11-08  Levente Mészáros
 
 	Added assignUniqueAddresses parameter to Ipv4NetworkConfigurator.
