--- a/src/inet/applications/httptools/ChangeLog
+++ b/src/inet/applications/httptools/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-20  Zoltan Bojthe
+
+	Changed to use TcpSocket::ReceiveQueueBasedCallback.
+
 2019-11-08  Levente Mészáros
 
 	Fixed memory leaks detected by static analysis.
