--- a/src/inet/applications/httptools/browser/ChangeLog
+++ b/src/inet/applications/httptools/browser/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-20  Zoltan Bojthe
+
+	Changed to use TcpSocket::ReceiveQueueBasedCallback.
+
 2019-11-06  Zoltan Bojthe
 
 	Fixed bug #219.
