--- a/src/inet/applications/httptools/common/ChangeLog
+++ b/src/inet/applications/httptools/common/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-20  Zoltan Bojthe
+
+	Changed to use TcpSocket::ReceiveQueueBasedCallback.
+
 2019-01-28  ------ inet-4.1.0 released ------
 
 2018-10-04  Zoltan Bojthe
