--- a/src/inet/common/geometry/common/ChangeLog
+++ b/src/inet/common/geometry/common/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-12-05  Levente Mészáros
+
+	Added several utility functions to Coord.
+
 2019-06-07  Levente Mészáros
 
 	Added equality operators to Quaternion.
