--- a/src/inet/common/misc/ChangeLog
+++ b/src/inet/common/misc/ChangeLog
@@ -1,5 +1,13 @@
 ====== inet-4.x ======
 
+2019-11-27  Zoltan Bojthe
+
+	Changed NetAnimTrace to use the standard C++ random generator to have no effect on the result of the simulation.
+
+2019-11-25  Zoltan Bojthe
+
+	Fixed Gate::getDisplayString() side effect: create channel when gate doesn't have channel.
+
 2019-01-28  ------ inet-4.1.0 released ------
 
 2018-11-23  Levente Mészáros
