--- a/src/inet/common/packet/recorder/ChangeLog
+++ b/src/inet/common/packet/recorder/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-19  Levente Mészáros
+
+	Fixed many memory leaks detected by Valgrind.
+
 2019-11-11  Levente Mészáros
 
 	Added missing error handling to PcapReader.
