--- a/src/inet/emulation/transportlayer/udp/ChangeLog
+++ b/src/inet/emulation/transportlayer/udp/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-12  Levente Mészáros
+
+	Changed parameter name to packetNameFormat according to naming convention.
+
 2019-10-01  Levente Mészáros
 
 	Added packetNameFormat parameter to ExtLowerUdp.
