--- a/src/inet/environment/objectcache/ChangeLog
+++ b/src/inet/environment/objectcache/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-12-05  Levente Mészáros
+
+	Fixed parameter types in GridObjectCache.
+
 2019-01-28  ------ inet-4.1.0 released ------
 
 2018-09-27  Levente Mészáros
