--- a/src/inet/linklayer/ieee8021d/common/ChangeLog
+++ b/src/inet/linklayer/ieee8021d/common/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-25  Zoltan Bojthe
+
+	Fixed Gate::getDisplayString() side effect: create channel when gate doesn't have channel.
+
 2019-10-31  Zoltan Bojthe
 
 	Redesigned BPDU packets.
