--- a/src/inet/networklayer/configurator/contract/ChangeLog
+++ b/src/inet/networklayer/configurator/contract/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-13  Levente Mészáros
+
+	Added IIpv4NodeConfigurator module interface.
+
 2019-01-28  ------ inet-4.1.0 released ------
 
 2018-06-27  ------ inet-4.0.0 released ------
@@ -9,4 +13,3 @@
 2017-12-22  ------ inet-3.99.2 released ------
 
 2017-11-16  ------ inet-3.99.1 released ------
-
