--- a/src/inet/networklayer/diffserv/ChangeLog
+++ b/src/inet/networklayer/diffserv/ChangeLog
@@ -1,5 +1,22 @@
 ====== inet-4.x ======
 
+2019-11-27  Zoltan Bojthe
+
+	Fixed gate name.
+
+2019-11-18  Zoltan Bojthe
+
+	Rename fields: diffServCodePoint to dscp, explicitCongestionNotification to ecn.
+	Fixed MultiFieldClassifier: set dscp and tos filtering to disabled in filter constructor.
+
+2019-11-15  Zoltan Bojthe
+
+	Fixed the portmin <= portmax checks in MultiFieldClassifier
+
+2019-11-14  Zoltan Bojthe
+
+	Added dscp parameter to MultiFieldClassifier.
+
 2019-10-07  Zoltan Bojthe
 
 	Fixed port check in MultiFieldClassifier.
