--- a/src/inet/networklayer/ipv6/ChangeLog
+++ b/src/inet/networklayer/ipv6/ChangeLog
@@ -1,5 +1,16 @@
 ====== inet-4.x ======
 
+2019-12-05  Zoltan Bojthe
+
+	Added OMNeT++ 6.0 custom fields as comment.
+
+2019-11-18  Zoltan Bojthe
+
+	Rename fields: diffServCodePoint to dscp, explicitCongestionNotification to ecn.
+	Redesigned how TC (TrafficClass) is stored, DSCP and ECN calculated.
+	Optimized Tag settings.
+	Added TOS (type of service) support (TosReq, TosInd tags).
+
 2019-11-11  Zoltan Bojthe
 
 	Added notifications about changing the InterfaceProtocolData set in InterfaceEntry.
