--- a/src/inet/networklayer/xmipv6/ChangeLog
+++ b/src/inet/networklayer/xmipv6/ChangeLog
@@ -1,5 +1,13 @@
 ====== inet-4.x ======
 
+2019-11-15  Levente Mészáros
+
+	Added guard condition around InterfaceReq.
+
+2019-11-14  Levente Mészáros
+
+	Moved initialization to INITSTAGE_LOCAL because other modules depend on it.
+
 2019-11-08  Levente Mészáros
 
 	Fixed memory leaks detected by static analysis.
