--- a/src/inet/physicallayer/backgroundnoise/ChangeLog
+++ b/src/inet/physicallayer/backgroundnoise/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-12-09  Levente Mészáros
+
+	Removed DomainLimitedFunction in release mode.
+
 2019-11-08  Levente Mészáros
 
 	Fixed memory leaks detected by static analysis.
