--- a/src/inet/physicallayer/ieee80211/packetlevel/ChangeLog
+++ b/src/inet/physicallayer/ieee80211/packetlevel/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-19  Levente Mészáros
+
+	Added signal type checks to 802.11 specific unit disk radio.
+
 2019-11-08  Levente Mészáros
 
 	Fixed b -> B length conversion.
