--- a/src/inet/routing/bgpv4/ChangeLog
+++ b/src/inet/routing/bgpv4/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-20  Levente Mészáros
+
+	Fixed crash in BGP tutorial step 3.
+
 2019-11-11  Levente Mészáros
 
 	Added @packetData annotation to non-Chunk based packet parts.
