--- a/src/inet/routing/rip/ChangeLog
+++ b/src/inet/routing/rip/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-28  Zoltan Bojthe
+
+	Optimized interfaceStateChangedSignal usage.
+
 2019-01-28  ------ inet-4.1.0 released ------
 
 2019-01-14  Zoltan Bojthe
