--- a/src/inet/transportlayer/contract/tcp/ChangeLog
+++ b/src/inet/transportlayer/contract/tcp/ChangeLog
@@ -1,5 +1,17 @@
 ====== inet-4.x ======
 
+2019-11-20  Levente Mészáros
+
+	Added ReceiveQueueBasedCallback to support arbitrary packet data slicing for applications.
+
+2019-11-18  Zoltan Bojthe
+
+	Added setTos() function and TcpSetTosCommand to TcpSocket.
+
+2019-11-13  Zoltan Bojthe
+
+	Renamed typeOfService to dscp, Tcp already uses this value to send DscpReq to IP layer.
+
 2019-09-22  Mani Amoozadeh
 
 	Added tcp socket options (TTL and TOS) -- note that tcp option is
