--- a/src/inet/transportlayer/contract/udp/ChangeLog
+++ b/src/inet/transportlayer/contract/udp/ChangeLog
@@ -1,5 +1,13 @@
 ====== inet-4.x ======
 
+2019-11-18  Zoltan Bojthe
+
+	Added setTos() function and UdpSetTosCommand to UdpSocket.
+
+2019-11-13  Zoltan Bojthe
+
+	Renamed typeOfService to dscp, Udp already uses this value to send DscpReq to IP layer.
+
 2019-09-21  Mani Amoozadeh
 
 	Reorganized code to better reflect the execution flow.
