--- a/src/inet/transportlayer/sctp/ChangeLog
+++ b/src/inet/transportlayer/sctp/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-20  Levente Mészáros
+
+	Fixed uninitialized read detected by Valgrind.
+
 2019-11-12  Zoltan Bojthe
 
 	Fixed input interface detection in SctpNatHook.
