--- a/src/inet/transportlayer/tcp_lwip/ChangeLog
+++ b/src/inet/transportlayer/tcp_lwip/ChangeLog
@@ -1,5 +1,17 @@
 ====== inet-4.x ======
 
+2019-11-27  Zoltan Bojthe
+
+	Fixed module deletion.
+
+2019-11-21  Zoltan Bojthe
+
+	Fixed destructor and nullptr exception.
+
+2019-11-20  Levente Mészáros
+
+	Fixed some memory leaks detected by Valgrind.
+
 2019-10-31  Zoltan Bojthe
 
 	Fixed messageKinds in NED.
