--- a/src/inet/transportlayer/tcp_nsc/ChangeLog
+++ b/src/inet/transportlayer/tcp_nsc/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-19  Levente Mészáros
+
+	Fixed many memory leaks detected by Valgrind.
+
 2019-10-31  Zoltan Bojthe
 
 	Fixed messageKinds in NED.
