--- a/src/inet/visualizer/scene/ChangeLog
+++ b/src/inet/visualizer/scene/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-12-09  Levente Mészáros
+
+	Added kludge for submodule name label in NetworkNodeCanvasVisualization.
+
 2019-08-24  Andras Varga
 
 	Added OpenStreetMapSceneCanvasVisualizer.
