--- a/src/inet/applications/pingapp/ChangeLog
+++ b/src/inet/applications/pingapp/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-12-16  Zoltan Bojthe
+
+	Removed unused pingIn gate.
+
 2019-10-31  Zoltan Bojthe
 
 	Moved kind enums to MSG files.
