--- a/src/inet/common/packet/chunk/ChangeLog
+++ b/src/inet/common/packet/chunk/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-12-13  Levente Mészáros
+
+	Added data field to ByteCountChunk and BitCountChunk shift operator.
+
 2019-12-05  Gyorgy Szaszko
 
 	Added displaying attached tags of Chunks in Qtenv.
