--- a/src/inet/common/scenario/ChangeLog
+++ b/src/inet/common/scenario/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-12-08  Andras Varga
+
+	Extended the <disconnect> and <set-channel-param> commands.
+
 2019-06-26  Zoltan Bojthe
 
 	Added ScenarioTimer self message.
