--- a/src/inet/environment/objectcache/ChangeLog
+++ b/src/inet/environment/objectcache/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-12-18  Levente Mészáros
+
+	Added support for OpenMP in order to allow parallel computation for medium visualization.
+
 2019-12-05  Levente Mészáros
 
 	Fixed parameter types in GridObjectCache.
