--- a/src/inet/linklayer/ethernet/ChangeLog
+++ b/src/inet/linklayer/ethernet/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-12-11  Zoltan Bojthe
+
+	Added EtherQosRedQueue with early detection (RED) and ECN support for ethernet interfaces.
+
 2019-11-19  Levente Mészáros
 
 	Fixed many memory leaks detected by Valgrind.
