--- a/src/inet/networklayer/ipv4/ChangeLog
+++ b/src/inet/networklayer/ipv4/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-12-16  Zoltan Bojthe
+
+	Fixed sending local broadcast packets only on designated interfaces.
+
 2019-12-05  Zoltan Bojthe
 
 	Added OMNeT++ 6.0 custom fields as comment.
