--- a/src/inet/routing/ospfv2/ChangeLog
+++ b/src/inet/routing/ospfv2/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-12-18  Levente Mészáros
+
+	Fixed shared pointer type.
+
 2019-11-28  Zoltan Bojthe
 
 	Optimized interfaceStateChangedSignal usage.
