--- a/src/inet/routing/ospfv2/router/ChangeLog
+++ b/src/inet/routing/ospfv2/router/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-11-11  Marcel Marek
+
+	Fixed adding next hop only if it doesn't already exist.
+
 2019-10-18  Zoltan Bojthe
 
 	Changed to use msg constructor to set message name and message kind.
