--- a/src/inet/transportlayer/sctp/ChangeLog
+++ b/src/inet/transportlayer/sctp/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-12-18  Levente Mészáros
+
+	Fixed chunk allocation.
+
 2019-11-20  Levente Mészáros
 
 	Fixed uninitialized read detected by Valgrind.
