--- a/src/inet/transportlayer/tcp/ChangeLog
+++ b/src/inet/transportlayer/tcp/ChangeLog
@@ -1,5 +1,13 @@
 ====== inet-4.x ======
 
+2019-12-18  Marcel Marek
+
+	Removed TODO; Updated comment.
+
+2019-12-11  Zoltan Bojthe
+
+	Switched to using IpEcnCode enums from EcnTag.msg.
+
 2019-10-28  Mohammad HabibAllah
 
 	Implemented Explicit Congestion Notification (ECN) in TCPReno.
