--- a/src/inet/visualizer/base/ChangeLog
+++ b/src/inet/visualizer/base/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-12-18  Levente Mészáros
+
+	Added a bunch of new parameters to MediumVisualizerBase.
+
 2019-12-05  Levente Mészáros
 
 	Added visualization support for spectograms and power density maps.
