--- a/src/inet/visualizer/physicallayer/ChangeLog
+++ b/src/inet/visualizer/physicallayer/ChangeLog
@@ -1,5 +1,18 @@
 ====== inet-4.x ======
 
+2019-12-18  Levente Mészáros
+
+	Added support for OpenMP in order to allow parallel computation for
+	medium visualization.
+	Changed power density map figures to display the background noise too.
+	Changed the annotation size to ignore the labels.
+	Shifted power density maps in Z order to have the node specific over the main one.
+	Added support for new medium visualizer parameters to MediumCanvasVisualizer.
+
+2019-12-17  Zoltan Bojthe
+
+	Fixed MediumCanvasVisualizer, it should always define the module.
+
 2019-12-05  Levente Mészáros
 
 	Added visualization support for spectograms and power density maps.
