--- a/src/inet/visualizer/util/ChangeLog
+++ b/src/inet/visualizer/util/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-4.x ======
 
+2019-12-18  Levente Mészáros
+
+	Visualizer: Extended Placement enumeration with center/center.
+
 2019-01-04  Levente Mészáros
 
 	Adapted queue visualizers to the new queueing API.
