--- a/src/inet/common/math/ChangeLog
+++ b/src/inet/common/math/ChangeLog
@@ -13,12 +13,12 @@
 	LinearInterpolator and LineardbInterpolator.
 
 	Added primitive functions are ConstantFunction, LinearFunction, BilinearFunction,
-	ReciprocalFunction, OneDimensionalBoxcarFunction, OneDimensionalInterpolatedFunction,
-	TwoDimensionalBoxcarFunction, GaussFunction and SawtoothFunction.
+	ReciprocalFunction, Boxcar1DFunction, Boxcar2DFunction, GaussFunction, SawtoothFunction,
+	Interpolated1DFunction, and PeriodicallyInterpolated1DFunction.
 
 	Added algebraic function operations are AdditedFunction, SubtractedFunction,
 	MultipliedFunction, DividedFunction, and SummedFunction.
 
 	Added function compositors are DomainLimitedFunction, DomainShiftedFunction,
-	ValueTruncatedFunction, MemoizedFunction, CombinedFunction, ModulatedFunction,
-	ApproximatedFunction, ExtrudedFunction, and IntegratedFunction.
+	DomainModulated2DFunction, ValueTruncatedFunction, MemoizedFunction, Combined2DFunction,
+	ApproximatedFunction, Extruded2DFunction, and IntegratedFunction.
