--- a/src/inet/common/math/ChangeLog
+++ b/src/inet/common/math/ChangeLog
@@ -12,11 +12,11 @@
 	MinimumInterpolator, MaximumInterpolator, AverageInterpolator, CloserInterpolator,
 	LinearInterpolator and LineardbInterpolator.
 
-	Added primitive functions are ConstantFunction, LinearFunction, BilinearFunction,
-	ReciprocalFunction, Boxcar1DFunction, Boxcar2DFunction, GaussFunction, SawtoothFunction,
-	Interpolated1DFunction, and PeriodicallyInterpolated1DFunction.
+	Added primitive functions are ConstantFunction, UnilinearFunction, BilinearFunction,
+	UnireciprocalFunction, Boxcar1DFunction, Boxcar2DFunction, GaussFunction,
+	SawtoothFunction, Interpolated1DFunction, and PeriodicallyInterpolated1DFunction.
 
-	Added algebraic function operations are AdditedFunction, SubtractedFunction,
+	Added algebraic function operations are AddedFunction, SubtractedFunction,
 	MultipliedFunction, DividedFunction, and SummedFunction.
 
 	Added function compositors are DomainLimitedFunction, DomainShiftedFunction,
