--- a/src/inet/queueing/filter/ChangeLog
+++ b/src/inet/queueing/filter/ChangeLog
@@ -8,4 +8,4 @@
 	queueing package.
 
 	Added new NED simple modules: OrdinalBasedDropper, PacketFilter, RateLimiter,
-	ContentBasedDropper, and RedDropper.
+	ContentBasedFilter, and RedDropper.
